@@ -1,5 +1,4 @@
 
-Work out where a new class is registered twice.
 
 Boostrapper could be made more DRY.
 
