@@ -5,6 +5,7 @@ bootstrapped. These placeholder skeleton classes will be reloaded from source at
 point.
 I think the hierarchy is correct and I need to double check.
 Reimplemented primitive subclassing to use cleaned up Bootstrapper methods.
+Removed duplicate registration of new class during subclass.
 
 
 21/01/2011 Changes
